--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -16,6 +16,10 @@
     position: relative;
     margin-top: -90px;
 
+    .preview-img {
+      width: 100%;
+    }
+
     .play-button {
       background: rgba(255, 255, 255, 0.2);
       backdrop-filter: blur(4px);
