Footer qo‘shildi va SCSS style o‘rnatildi

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,6 +1,10 @@
 .footer {
   margin-top: 120px;
 
+  .footer_logo {
+    cursor: pointer;
+  }
+
   &__container {
     display: flex;
     justify-content: space-between;
