--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,9 @@
 .footer {
   margin-top: 120px;
 }
+.footer .footer_logo {
+  cursor: pointer;
+}
 .footer__container {
   display: flex;
   justify-content: space-between;
